--- a/search_system/Cargo.toml
+++ b/search_system/Cargo.toml
@@ -21,7 +21,7 @@ tracing = "0.1"
 tracing-futures = "0.2"
 tracing-log = { version = "0.1", features = ["env_logger"]}
 tracing-subscriber = "0.2"
-uuid = { version = "0.8", features = ["serde"]}
+uuid = { version = "0.8", features = ["serde", "v4"]}
 chrono = {version = "0.4", features = ["serde"]}
 validator = "0.10"
 validator_derive = "0.10"
