--- a/search_system/Cargo.toml
+++ b/search_system/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 actix-web = "3"
 actix-rt = "1.0"
 actix-files = "0.5.0"
+actix-identity = "0.3.1"
 askama = "0.8"
 config = "0.10"
 dotenv = "0.15"
@@ -28,7 +29,7 @@ validator_derive = "0.10"
 jsonwebtoken = "7.1"
 argonautica = {version = "0.2", features = ["simd"]}
 futures = {version = "0.3", features = ["compat"]}
-diesel = { version = "^1.1.0", features = ["chrono", "postgres", "r2d2"] }
+diesel = { version = "^1.1.0", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
 r2d2 = "0.8"
 r2d2_postgres = "0.18"
 failure = "0.1"
