--- a/analyzer/Cargo.toml
+++ b/analyzer/Cargo.toml
@@ -11,3 +11,7 @@ regex = "1"
 porter-stemmer = "0.1.1"
 unicode-segmentation = "1.7.1"
 stopwords = "0.1.0"
+lopdf = "0.26"
+pdf-extract = "0.6.2"
+pdf = "0.7.1"
+bson = "0.6.1"
