--- a/search_system/docker-compose.yaml
+++ b/search_system/docker-compose.yaml
@@ -9,3 +9,15 @@ services:
       POSTGRES:DB: search
     ports:
       - 5432:5432
+
+  mongo_db:
+    image: 'mongo'
+    container_name: 'mongo_service'
+    environment:
+      - MONGO_INITDB_DATABASE=index
+      - MONGO_INITDB_USERNAME=sgudim
+      - MONGO_INITROOT_PASSWORD=simon
+    volumes:
+    - ./mongo-volume:/data/db 
+    ports:
+      - '27017:27017'
