--- a/search_system/.env
+++ b/search_system/.env
@@ -1,4 +1,5 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:4500/users
+MONGO_URL=mongodb://localhost:27017/admin
 HOST=localhost
 PORT=3000
 RUST_LOG=debug
